fixed assets path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Genysis CTF</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -15,7 +15,7 @@
         class="h-[60px] flex justify-between px-14 items-center bg-[#1E1A2B] text-white border-b border-[#434343] absolute top-0 right-0 left-0"
       >
         <div class="h-[30px]">
-          <img src="/assets/ctfd_1.svg" alt="Logo" class="h-full w-fit" />
+          <img src="./assets/ctfd_1.svg" alt="Logo" class="h-full w-fit" />
         </div>
         <div class="hidden md:block">
           <ul class="flex gap-10 text-sm">
@@ -45,7 +45,7 @@
           With the best Capture The Flag platform
         </p>
         <div class="flex items-center mt-5">
-          <div><img src="/assets/up.svg" alt="" /></div>
+          <div><img src="./assets/up.svg" alt="" /></div>
           <button
             class="px-5 text-sm md:text-lg py-2 rounded-full font-bold from-[#28FC05] to-[#1CA0FF] bg-gradient-to-r text-white hover:scale-105 hover:text-[#1E1A2B]"
           >
@@ -58,7 +58,7 @@
       >
         <div class="rounded-full w-[100px] h-[100px] img-gradient"></div>
         <div class="absolute">
-          <img src="/assets/hero.svg" alt="" />
+          <img src="./assets/hero.svg" alt="" />
         </div>
       </div>
     </main>
@@ -80,7 +80,7 @@
             <div
               class="w-[50px] h-[50px] bg-[#0c0b13] rounded-full mb-5 flex items-center justify-center p-2"
             >
-              <img src="/assets/visualize.svg" alt="" />
+              <img src="./assets/visualize.svg" alt="" />
             </div>
             <p class="text-center text-white font-medium text-xl">Visualize</p>
           </div>
@@ -93,7 +93,7 @@
             <div
               class="w-[50px] h-[50px] bg-[#0c0b13] rounded-full mb-5 flex items-center justify-center p-2"
             >
-              <img src="/assets/edit.svg" alt="" />
+              <img src="./assets/edit.svg" alt="" />
             </div>
             <p class="text-center text-white font-medium text-xl">Edit</p>
           </div>
@@ -106,7 +106,7 @@
             <div
               class="w-[50px] h-[50px] bg-[#0c0b13] rounded-full mb-5 flex items-center justify-center p-2"
             >
-              <img src="/assets/customize.svg" alt="" />
+              <img src="./assets/customize.svg" alt="" />
             </div>
             <p class="text-center text-white font-medium text-xl">
               Customizeable
@@ -121,7 +121,7 @@
             <div
               class="w-[50px] h-[50px] bg-[#0c0b13] rounded-full mb-5 flex items-center justify-center p-2"
             >
-              <img src="/assets/export.svg" alt="" />
+              <img src="./assets/export.svg" alt="" />
             </div>
             <p class="text-center text-white font-medium text-xl">
               Import/Export
